# frame_ble_python

./: CHANGELOG.md  README.md  pyproject.toml
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst
docs/source/_static/css/: rtd_dark.css
src/frame_ble/: __init__.py  frame_ble.py
