[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "frame_ble"
version = "0.1.0"
authors = [
    { name = "CitizenOne", email = "17427385+CitizenOneX@users.noreply.github.com" },
]
description = "Low-level library for Bluetooth LE connection to Brilliant Labs Frame"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[tool.hatch.build.targets.wheel]
packages = ["src/frame_ble"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]

[project.urls]
"Homepage" = "https://github.com/CitizenOneX/frame_ble"
"Bug Tracker" = "https://github.com/CitizenOneX/frame_ble/issues"
